Updates with  Web Server Frameworks & Express
1. Added documentation.html into "public” folder.
2. Updated index.js
 a)Created JSON object (movies list )
 b)Handling endpoint “/movies” to display JSON object
c)Return static file(documentation.html)
d)Used Morgan middleware library to log all requests.
e)By navigating few pages in the browser, log was created in the terminal.
f)Created an error-handling middleware to display.

--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
   "name": "my_movie_api",
   "version": "1.0.0",
-  "description": "My Movie API Package",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/punithacasi/My_Movie_API.git"
-  },
   "author": "Punitha",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/punithacasi/My_Movie_API/issues"
-  },
-  "homepage": "https://github.com/punithacasi/My_Movie_API#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "morgan": "^1.10.0"
   }
 }
