--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.19.2",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "uuid": "^10.0.0"
   }
