--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "uuid": "^10.0.0"
   }
 }
